--- a/src/app/pages/login/login.html
+++ b/src/app/pages/login/login.html
@@ -19,8 +19,8 @@
     <div class="header-content">
         <div class="inner">
             <img style="height:300px; width:auto; border-radius:7px;" src="http://i.imgur.com/uIsOLj2.png" alt="Post's Image">
-            <!-- <h1 class="cursive">AQConnect</h1>
-            <h4>Explore, Interact, Connect!</h4> -->
+            <h1 class="cursive">AQConnect</h1>
+            <h4>Explore, Interact, Connect!</h4>
             <div id="login" class="text-center">
             	<div class="form-group login">
             		<label for="exampleInputEmail1">Log In</label>
@@ -39,24 +39,36 @@
     </div>
 </header>
 
-<section id="feature-head" style="background-color:#050706;">
+<section id="feature-head" style="background-color:#050706; padding-top:10px;">
 	<div class="container-fluid">
 		<div class="row features">
 			<div class="row">
         		<div class="media wow fadeIn">
                     <div class="media-body media-middle text-center">
-		            	<h2 class="text-primary">We can promote something here</h2>
+		            	<!-- <h2 class="text-primary">We can promote something here</h2> -->
 		            </div>
 		        </div>
-            </div><br>
-            <div class="row"  style="text-align:center;">
-            	<img src="http://placehold.it/200x200" alt="" style="border-radius:50%; margin-left:5px; margin-right:5px;">
-            	<img src="http://placehold.it/200x200" alt="" style="border-radius:50%; margin-left:5px; margin-right:5px;">
-            	<img src="http://placehold.it/200x200" alt="" style="border-radius:50%; margin-left:5px; margin-right:5px;">
-            	<img src="http://placehold.it/200x200" alt="" style="border-radius:50%; margin-left:5px; margin-right:5px;">
-            	<img src="http://placehold.it/200x200" alt="" style="border-radius:50%; margin-left:5px; margin-right:5px;">
-            	<img src="http://placehold.it/200x200" alt="" style="border-radius:50%; margin-left:5px; margin-right:5px;">
             </div>
+            <section class="autoplay" style="margin:auto; padding-bottom:0px; width:100%">
+              <div>
+                <img src="http://aq3d.com/media/1979/screenshot1.jpg">
+              </div>
+              <div>
+                <img src="http://aq3d.com/media/1990/screenshot14.jpg">
+              </div>
+              <div>
+                <img src="http://aq3d.com/media/1982/screenshot5.jpg">
+              </div>
+              <div>
+                <img src="http://aq3d.com/media/1986/screenshot8.jpg">
+              </div>
+              <div>
+                <img src="http://aq3d.com/media/1985/screenshot9.jpg">
+              </div>
+              <div>
+                <img src="http://aq3d.com/media/1984/screenshot7.jpg">
+              </div>
+            </section>
         </div>
 	</div>
 </section>
@@ -82,18 +94,26 @@
 <section id="social" style="background-color:#050706;">
 	<div class="container-fluid">
 		<div class="row features text-center" style="margin:auto;">
-       		<div class="hidden-lg col-md-12 col-sm-12 col-xs-12"  style="text-align:center;">
-            	<img src="http://placehold.it/200x200" alt="" style="border-radius:50%;">
+       		<div class="hidden-lg hidden-md col-md-12 col-sm-12 col-xs-12"  style="text-align:center;">
+            	<img src="http://aqconnect.io/social.png" alt="" style=" height:250px; width:auto; border-radius:50%; ">
             </div>
-        	<div class="col-lg-offset-2 col-md-offset-2 col-sm-offset-2 col-xs-offset-2 col-lg-5 col-md-5 col-sm-5 col-xs-5">
+            <div class="hidden-lg hidden-md col-sm-offset-2 col-xs-offset-2 col-sm-8 col-xs-8 ">
+                <div class="media wow fadeIn">
+                    <div class="media-body media-middle" style="text-align:center;">
+                        <h2>Stay Connected</h2>
+                        <p>Keep in touch with other players with the social features AQConnect has to offer! How are you going to slay Dragons and Yettuns if you don't have a place to rally up a good group of guildies to help out?</p>
+                    </div>
+                </div>
+            </div>
+        	<div class="col-lg-offset-2 col-md-offset-2 col-lg-5 col-md-5 hidden-sm hidden-xs">
         		<div class="media wow fadeIn">
                     <div class="media-body media-middle" style="text-align:right;">
 		            	<h2>Stay Connected</h2>
-		            	<p>Keep in touch with other players with the social features AQConnect has to offer! Currently we have forums, however in the near future we will be creating a social-media type of feature in-site where users will have timelines and friends list, etc... Similar to a Facebook or Twitter type of media.</p>
+		            	<p>Keep in touch with other players with the social features AQConnect has to offer! How are you going to slay Dragons and Yettuns if you don't have a place to rally up a good group of guildies to help out?</p>
 		            </div>
 		        </div>
             </div>
-            <div class="col-lg-2 hidden-md hidden-sm hidden-xs"  style="text-align:center;">
+            <div class="col-lg-2 col-md-2 hidden-sm hidden-xs"  style="text-align:center;">
             	<img src="http://aqconnect.io/social.png" alt="" style=" height:250px; width:auto; border-radius:50%; ">
             </div>
         </div>
@@ -108,8 +128,8 @@
         	<div class="col-lg-7">
         		<div class="media wow fadeIn">
                     <div class="media-body media-middle text-center para-text">
-		            	<h2>Be in the know</h2>
-		            	<p>Some BS about how awesome the news section is. Something that will trick the users into reading a boring article x.x </p>
+		            	<h2>Be in the Know</h2>
+		            	<p>The News section is kept updated with current events, releases, rumors...you name it! As an adventurer, being informed about the goings-on in AQ3D is important! </p>
 		            </div>
 		        </div>
             </div>
@@ -157,7 +177,7 @@
 							<div class="single-service">
 								<i class="fa fa-gift"></i>
 								<h2>Built For You</h2>
-								<p>This project is dedicated to helping unite and build the AQ3D Community! Meant to be used as a meeting place, info broker, social interaction tool, and more!</p>
+								<p>This project is dedicated to helping unite and build the AQ3D Community! Meant to be used as a meeting place, information provider, social interaction tool, and more!</p>
 							</div>
 						</div>
 						<div class="col-sm-4">
