--- a/src/app/pages/navbar/nav.css
+++ b/src/app/pages/navbar/nav.css
@@ -7,6 +7,7 @@
     border-color: transparent;
     background-color: rgba(0, 0, 0, 0.28);
     min-height: 60px;
+    height:60px;
 }
 
 /*Scrolled navbar <li> hover*/
@@ -36,10 +37,13 @@
     font-weight: bold;
     font-size: 17px;
 }
-
+.dropdown {
+    max-height:60px;
+    height:60px;
+}
 /*Background of dropdown*/
 .dropdown-menu {
-	background-color:rgba(0, 0, 0, 0.28);
+	background-color:rgba(0, 0, 0, 0.85);
 }
 
 /*Text color of options in dropdown*/
@@ -53,7 +57,7 @@
 }
 
 /*Shows the dropdown on hover*/
-.dropdown:hover .dropdown-menu {
+.dropdown.dropdown-account:hover .dropdown-menu {
    display: block;
 }
 
@@ -61,5 +65,4 @@
 .dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
             background-color:rgba(149, 107, 185, 0.74);
  }
- 
 
