--- a/src/app/pages/navbar/nav.html
+++ b/src/app/pages/navbar/nav.html
@@ -37,6 +37,24 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown" style="margin-right:20px;">
+                  <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" 
+                      [ngClass]="{'notification-indicator-active': notification_check}"><i class="fa fa-bell" aria-hidden="true" style="font-size:20px;"></i></a>
+                  <ul class="dropdown-menu">
+                    <!-- <li>
+                        <a>
+                            <span class="glyphicon glyphicon-list-alt" aria-hidden="true" style="margin-right:3px;"></span>
+                            <b>Fan</b> commented on your forum post: How To Clear Your Cache
+                        </a>
+                    </li> -->
+                    <li *ngFor="let notification of notifications">
+                        <a>
+                            <span class="glyphicon glyphicon-heart" aria-hidden="true" style="margin-right:3px;"></span>
+                            <b>{{notification.notifier_name}}</b> {{notification.text}}
+                        </a>
+                    </li>
+                  </ul>
+                </li>
+                <li class="dropdown dropdown-account" style="margin-right:20px;">
                   <!-- <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a> -->
                   <img class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" style="height:50px; width:auto; margin-top:5px; border-radius:7px;" src="{{user?.image_url}}" alt="">
                   <ul class="dropdown-menu">
