--- a/src/app/pages/news/news.html
+++ b/src/app/pages/news/news.html
@@ -3,7 +3,7 @@
 		<div class="col-lg-8 col-lg-offset-2">
 			<ul class="list-group">
 			  <div class="loader" *ngIf="!news || !news.length">Loading...</div>
-			  <li *ngFor="let post of news" class="list-group-item" data-toggle="modal" href="#newsModal" (click)="openDetail(post.ID)">
+			  <li *ngFor="let post of news; let i = index;" class="list-group-item" >
 			  	<div class="row">
 			  		<div class="col-lg-2">
 			  			<span class="label label-default" [ngStyle]="{'background-color':+post?.news_type | newsType:'color'}">
@@ -11,12 +11,14 @@
 			  			</span>
 			  		</div>
 			  		<div class="col-lg-7">
-			  			<p>{{post.name}}</p>
+			  			<p data-toggle="modal" href="#newsModal" (click)="openDetail(post.ID)">{{post.name}}</p>
 			  			<hr>
 			  			<p style="color: #956bb9;"><small>{{post.text_preview}}</small></p>
 			  		</div>
 					<div class="col-lg-3">
-						{{post.AUTHOR}} on {{post.date | date:"MM/dd/yyyy"}}
+						{{post.AUTHOR}} on {{post.date | date:"MM/dd/yyyy"}} <br>
+						Likes: {{post.likes}} <br>
+						<span style="font-size:25px;" class="glyphicon glyphicon-heart" aria-hidden="true" [ngStyle]="{'color':+post?.LIKEID | liked:userID}" (click)="likePost(i)"></span>
 					</div>
 			  	</div>
 			  </li>
