--- a/src/app/pages/navbar/nav.html
+++ b/src/app/pages/navbar/nav.html
@@ -40,13 +40,12 @@
                   <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" 
                       [ngClass]="{'notification-indicator-active': notification_check}"><i class="fa fa-bell" aria-hidden="true" style="font-size:20px;"></i></a>
                   <ul class="dropdown-menu">
-                    <!-- <li>
-                        <a>
-                            <span class="glyphicon glyphicon-list-alt" aria-hidden="true" style="margin-right:3px;"></span>
-                            <b>Fan</b> commented on your forum post: How To Clear Your Cache
+                    <li>
+                        <a style="color:#de4d4d;" (click)="clearAllNotifications()">
+                            Clear All
                         </a>
-                    </li> -->
-                    <li *ngFor="let notification of notifications">
+                    </li>
+                    <li *ngFor="let notification of notifications" (click)="readNotification(notification.ID)" [ngStyle]="{'background-color': !notification?.read ? 'rgba(135, 98, 166, 0.54)' : '' } ">
                         <a>
                             <span class="glyphicon glyphicon-heart" aria-hidden="true" style="margin-right:3px;"></span>
                             <b>{{notification.notifier_name}}</b> {{notification.text}}
