Fixed login form style

--- a/src/app/pages/login/login.html
+++ b/src/app/pages/login/login.html
@@ -23,7 +23,7 @@
             <h4>Explore, Interact, Connect!</h4>
             <div id="login" class="text-center">
             	<div class="form-group login">
-            		<label for="exampleInputEmail1">Log In</label>
+            		<!-- <label for="exampleInputEmail1">Log In</label> -->
             		<input type="email" class="form-control login-top" (keyup.enter)="login(email, password)" [(ngModel)]="email" id="exampleInputEmail1" placeholder="Email">
             		<input type="password" class="form-control login-bottom" (keyup.enter)="login(email, password)" [(ngModel)]="password" id="exampleInputPassword1" placeholder="Password">
             		<!-- Don't have an account? <a >Sign Up</a> -->
