--- a/src/app/pages/home/home.css
+++ b/src/app/pages/home/home.css
@@ -1,3 +1,82 @@
 #home  {
   padding-top:70px;
+  font-family: 'Questrial','Helvetica Neue',Arial,sans-serif;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    /*background-image: url(https://wallpaperscraft.com/image/tiles_mosaic_color_44969_3840x2400.jpg);*/
+    /*background-image: url(https://wallpapers.wincomm.ru/uploads/posts/2015-02/1424456896_geympad-xbox-one.jpg);*/
+    color: #d3d3d3;
+    webkit-tap-highlight-color: #222;
+    background-attachment: fixed;
+    /*height:100%;*/
+    min-height:100%;
+    background-color:#100d13;
+}
+
+.well-form {
+	border:none;
+	padding:5px;
+}
+
+.input-icon {
+    font-size:30px;
+    margin-right:8px;
+    opacity:0.5;
+    transition: opacity 250ms ease-in;
+}
+
+.input-icon:hover {
+    opacity:1;
+}
+
+.post-submit {
+    background-color: rgb(149, 107, 185);
+    float:left;
+    border-radius:7px;
+    color:rgb(0,0,0);
+    transition: opacity 250ms ease-in;
+    opacity:0.50;
+}
+
+.post-submit:hover, .post-submit:click {
+    background-color: rgb(149, 107, 185) !important;
+    color:rgb(0,0,0);
+    opacity:1;
+}
+
+.panel, .panel-heading, .panel-body {
+    background-color:rgba(88, 71, 109, 0.18) !important;
+    border:0px;
+    border-radius:0px;
+}
+
+.panel {
+    margin-bottom:8px;
+}
+
+.post-body>p {
+    color:#a7a7a7;
+}
+
+.btn-circle.btn-xl {
+  text-align:center;
+  width: 45px;
+  height: 45px;
+  padding: 10px;
+  font-size: 24px;
+  line-height: 1.33;
+  border-radius: 50%;
+  bottom:40px; 
+  right:40px; 
+  position:fixed; 
+  z-index:10000;
+  background-color:#956bb9;
+  transition:box-shadow 1s ease-in;
+  color:#1e1e1e;
+}
+
+.btn-circle.btn-xl: hover{
+    box-shadow:0px 0px 10px red;
 }
